# xreal-bevy

./: .gitignore  Cargo.toml  README.md  XREAL_GUIDE.md  build.rs  xreal_virtual_desktop.long-type-12336115927484916965.txt  xreal_virtual_desktop.long-type-793706580633038050.txt
.config/: nextest.toml
plugins/: mod.rs  utils.rs
plugins/shaders/: terminal.wgsl
plugins/xreal-browser-plugin/: Cargo.toml
plugins/xreal-browser-plugin/src/: components.rs  lib.rs  plugin.rs  resources.rs  systems.rs
plugins/xreal-terminal-plugin/: Cargo.toml
plugins/xreal-terminal-plugin/src/: color_scheme.rs  components.rs  lib.rs  plugin.rs  resources.rs  systems.rs
src/: capture.rs  cursor.rs  driver.rs  error.rs  input.rs  lib.rs  main.rs  render.rs  setup.rs  tracking.rs  ui.rs  usb_debug.rs  xreal_stereo.rs
src/input/: cursor.rs  error.rs  mod.rs  render.rs  tracking.rs
src/input/plugins/: input.rs  mod.rs
src/plugins/: builder.rs  context.rs  fast_builder.rs  fast_data.rs  fast_registry.rs  input.rs  lifecycle.rs  loader.rs  mod.rs  registry.rs  surface.rs  utils.rs
src/plugins/examples/: browser.rs  builder_demo.rs  fast_demo.rs  mod.rs  terminal.rs  utils.rs
src/state/: mod.rs  recovery.rs  schema.rs  serialization.rs  storage.rs  systems.rs  validation.rs
src/state/schema/: audio.rs  calibration.rs  core.rs  input.rs  mod.rs  network.rs  performance.rs  plugins.rs  preferences.rs  security.rs  ui.rs  window.rs
src/ui/: mod.rs  state.rs
tests/: mod.rs  test_utils.rs
tests/plugins/: builder_demo_test.rs  builder_test.rs  fast_builder_test.rs  fast_data_test.rs  input_test.rs  mod.rs  utils_test.rs
tests/state/: mod.rs  schema_test.rs  serialization_test.rs  storage_test.rs
