[package]
name = "xreal-virtual-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
ar-drivers = { git = "https://github.com/badicsalex/ar-drivers-rs.git" }
bevy = "0.16.1"
imu-fusion = "0.2.6"
hidapi = "2.6.3"
scap = { git = "https://github.com/CapSoftware/scap.git" }
bevy_egui = "0.35.1"
anyhow = "1.0.98"
crossbeam-channel = "0.5"
enigo = "0.5.0"
instant = "0.1.13"
quaternion-core = "0.5.4"
ratatui = { git = "https://github.com/ratatui/ratatui.git", branch = "main" }
async-std = "1.13.1"
async-process = "2.3"
libloading = "0.8"
notify = "6.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
bytemuck = { version = "1.19", features = ["derive"] }
wgpu = "24.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
objc2-app-kit = "0.3.1"
