[package]
name = "xreal-virtual-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xreal-virtual-desktop"
path = "src/main.rs"

[dependencies]
ar-drivers = { git = "https://github.com/badicsalex/ar-drivers-rs.git", features = [
    # Hardware support
    "nreal", "rokid", "mad_gaze", "grawoow",
    
    # Optional dependencies
    "rusb", "hidapi", "serialport", "tinyjson", "bytemuck"
] }
bevy = { version = "0.16.1", features = ["webgpu"] }
imu-fusion = "0.2.6"
hidapi = "2.6.3"
scap = { git = "https://github.com/CapSoftware/scap.git" }
bevy_egui = "0.35.1"
anyhow = "1.0.98"
futures-lite = "2.3.0"
tracing-subscriber = "0.3.18"
crossbeam-channel = "0.5"
instant = "0.1.13"
quaternion-core = "0.5.4"
ratatui = { git = "https://github.com/ratatui/ratatui.git", branch = "main" }
async-std = "1.13.1"
async-process = "2.3"
libloading = "0.8"
notify = "8.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
thiserror = "2.0"
bytemuck = { version = "1.23", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }
tracing = "0.1.41"
dirs = "6.0"
wgpu = "0.19"
zstd = "0.13"
libc = "0.2"
base64 = "0.22"
enigo = "0.5"
xreal-browser-plugin = { version = "0.1.0", path = "plugins/xreal-browser-plugin" }
xreal-terminal-plugin = { version = "0.1.0", path = "plugins/xreal-terminal-plugin" }
bitflags = "2.9.1"
crossbeam = "0.8.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
objc2-app-kit = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.46", features = ["test-util", "macros", "rt-multi-thread"] }
